--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -13,6 +13,9 @@ NEXT SCHEDULED WORK SESSIONS (*BOTH* DEBUGGING AND / OR INFRASTRUCTURE)
 Google Font select from a list in the interface does not seem to work?
 
 
+Torture test the security level toggle, like we did for the 2fa toggle.
+
+
 Try having a textarea behave like a password field with this CSS... -webkit-text-security : circle   
 
 
