--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -10,16 +10,16 @@ NEXT SCHEDULED WORK SESSIONS (*BOTH* DEBUGGING AND / OR INFRASTRUCTURE)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Google Font select from a list in the interface does not seem to work?
+Torture test the CACHED config upgrade logic, INCLUDING the recently-added bundled plugins config support.
+
+
+At top of general page, have a 'Scan For Database Upgrades", which simply triggers the "$app_was_upgraded" flag (set near top of config-init.php), to check if the CACHED config needs to be upgraded.
 
 
 Torture test the security level toggle, like we did for the 2fa toggle.
 
 
 Try having a textarea behave like a password field with this CSS... -webkit-text-security : circle   
-
-
-Add support for ct['conf'] upgrades to BUNDLED (whitelisted) PLUGINS configs, via the already-integrated "$subarray_allow_upgrading" var.
 
 
 Add input validation for the admin config setting fields in each interface section (connected to config-init for the flag: $update_config_valid).
