--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6320,6 +6320,8 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -------------------------------------------------------------------
 6.00.28:
 
+-BUG FIX: Fixed price alert formatting, for markets with no available trade volume history
+
 -BUG FIX: Fixed support for using Google Fonts (to change the text style used in the app)
 
 -BUG FIX: Fixed proper refreshing of plugin configs, when configs are updated
