--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -10,22 +10,13 @@ NEXT SCHEDULED WORK SESSIONS (*BOTH* DEBUGGING AND / OR INFRASTRUCTURE)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Torture test the CACHED config upgrade logic (with the new "Scan For Database Upgrades" button at top of general section), INCLUDING the recently-added bundled plugins config support.
+Try having a textarea behave like a password field with this CSS... -webkit-text-security : circle 
 
 
-Torture test the security level toggle, like we did for the 2fa toggle.
-
-
-Try having a textarea behave like a password field with this CSS... -webkit-text-security : circle   
-
-
-Add input validation for the admin config setting fields in each interface section (connected to config-init for the flag: $update_config_valid).
+Test fully on PHP 7.4, by filling in all the settings with my personal ones on the public demo site. Import my charts there as well. Use it for at least a few weeks, with PHP error logging on. Blank out my settings on the local network install, so we don't get duplicate alerts.  
 
 
 Update screenshots, since we overhauled everything in the interface.
-
-
-Test fully on PHP 7.4, by filling in all the settings with my personal ones on the public demo site. Import my charts there as well. Use it for at least a few weeks, with PHP error logging on. Blank out my settings on the local network install, so we don't get duplicate alerts.
 
 
 Add an info icon next to 2FA fields, with info on what it is, usage, and how to MANUALLY disable it.
@@ -593,11 +584,11 @@ Add logic to offer securing the computer in the auto-install. Add subsections "R
 
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-MAYBE SECTION
+MAYBE SECTION (RESEARCH THESE)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Change "$this" in the core classes to use the "$ct['category']" format instead, AND of course make sure we have the "$ct" global.
+Research the possibility of inter-linking the tracker app into the ticker app, for displaying one's portfolio worth for each coin. Maybe requiring the ticker app being installed in a subdirectory of the tracker app server main directory, so it easily could have access to cookie data?
 
 
 Some of our extra security automation options in FOLIO-INSTALL.bash may also be appropriate for my other auto-installer scripts (ticker / Bluetooth radio)?
